--- a/src/app/components/clients/clients.component.html
+++ b/src/app/components/clients/clients.component.html
@@ -68,16 +68,18 @@
     </div>
   </div>
 </div>
-<div class="row">
-  <div class="col-sm-12 col-md-10">
-    <div class="card">
-      <mat-paginator
-        [length]="length"
-        [pageSize]="pageSize"
-        [pageSizeOptions]="pageSizeOptions"
-        showFirstLastButtons
-      >
-      </mat-paginator>
+<div class="row" >
+  <div class="col-12 col-md-10">
+    <mat-paginator
+    [length]="length"
+    [pageSize]="pageSize"
+    [pageSizeOptions]="pageSizeOptions"
+    showFirstLastButtons
+  >
+  </mat-paginator>
+  </div>
+  <div class="col-sm-12 col-md-10" *ngIf="allClients.length>=1">
+    <div class="">
       <div class="example-container mat-elevation-z8 card-body">
         <mat-table [dataSource]="datasource" matSort>
           <!-- ID Column -->
@@ -96,11 +98,11 @@
             <mat-cell *matCellDef="let row"> {{ row.clientType }} </mat-cell>
           </ng-container>
 
-          <ng-container matColumnDef="boite">
+          <ng-container matColumnDef="boiteNumber">
             <mat-header-cell *matHeaderCellDef mat-sort-header>
               Numero de boite
             </mat-header-cell>
-            <mat-cell *matCellDef="let row"> {{ row.boite }} </mat-cell>
+            <mat-cell *matCellDef="let row"> {{ row.boiteNumber }} </mat-cell>
           </ng-container>
 
           <!-- Action Column -->
@@ -110,7 +112,7 @@
             </mat-header-cell>
             <mat-cell *matCellDef="let row">
               <button
-                (click)="details(row.id)"
+                (click)="details(row._id)"
                 class="btn btn-group btn-outline-primary"
               >
                 Consulter
@@ -125,6 +127,6 @@
     </div>
   </div>
 </div>
-<div class="loading" *ngIf="clients.length<1">
+<div class="loading" *ngIf="allClients.length<1">
   <mat-spinner color="warning"></mat-spinner>
 </div>
