--- a/src/app/components/add-client/add-client.component.html
+++ b/src/app/components/add-client/add-client.component.html
@@ -1,20 +1,111 @@
-<div class="row">
+<div class="row mb-5">
+  <div class="col-12">
+    <div class="progress border-warning border">
+      <div *ngIf="E1" class="progress-bar" role="progressbar" style="width: 33%" aria-valuenow="1/3" aria-valuemin="0"
+        aria-valuemax="100"></div>
+      <div *ngIf="E2" class="progress-bar" role="progressbar" style="width: 66%" aria-valuenow="2/3" aria-valuemin="0"
+        aria-valuemax="100"></div>
+      <div *ngIf="E3" class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="3/3" aria-valuemin="0"
+        aria-valuemax="100"></div>
+    </div>
+  </div>
+</div>
+
+
+
+<div class="row" *ngIf="E1">
   <div class="col-md-8">
     <div class="card border-info">
       <h4 class="card-header">Ajouter un client</h4>
       <div class="card-body">
-        <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+        <form [formGroup]="clientForm" (ngSubmit)="onSubmit()">
+          <div class="row">
+            <div class="col-md-6">
+              <label>Type de client</label>
+              <div class="form-group ">
+                <mat-form-field class="form-group">
+                  <mat-select matInput formControlName="type" name="type" id="type">
+                    <mat-option *ngFor="let type of clientTypes" :value="type.name">{{type.description}}</mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group ">
+                <mat-form-field class=" form-group">
+                  <input matInput formControlName="name" placeholder="Nom complet" type="text" />
+                </mat-form-field>
+              </div>
+            </div>
+            <div class="col-md-5">
+              <div class="form-group">
+                <mat-form-field class="form-group">
+                  <input matInput formControlName="email" placeholder="Addresse email" type="email" />
+                </mat-form-field>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="form-group">
+                <mat-form-field class="form-group">
+                  <input matInput formControlName="cin" placeholder="Numero de carte d'identité/passport" type="text" />
+                </mat-form-field>
+              </div>
+            </div>
+            <div class="col-12">
+              <div class="form-group">
+                <mat-form-field class="form-group" width="100%">
+                  <input matInput formControlName="address" placeholder="Addresse complete" type="text" />
+                </mat-form-field>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12 col-md-4">
+              <div class="form-group">
+                <mat-form-field class="form-group">
+                  <input matInput formControlName="number" placeholder="Numero" type="number" />
+                </mat-form-field>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <label>Boite Postale</label>
+              <div class=" d-flex flex-row justify-content-between align-items-baseline">
+                <a class="btn btn-outline-primary" (click)="attribuer()">Attribué</a>
+                <span class="h6" *ngIf="clientProfil.boiteNumber"> boite numéro: {{ clientProfil?.boiteNumber }}</span>
+              </div>
+            </div>
+          </div>
+          <button type="submit" class="btn-group btn btn-outline-primary" [disabled]="clientForm.invalid || clientProfil.boiteNumber===''">
+            Passer à l'etape 2
+          </button>
+          <div class="clearfix"></div>
+        </form>
+        <p class="text-danger">{{ errorMessage }}</p>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+
+
+<div class="row" *ngIf="E2">
+  <div class="col-md-8">
+    <div class="card border-info">
+      <h4 class="card-header">Enregistrer les forfaits</h4>
+      <div class="card-body">
+        <form [formGroup]="clientForm" (ngSubmit)="onSubmit()">
           <div class="row">
             <div class="col-md-6">
               <div class="form-group ">
-                <mat-form-field class=" form-group border-right border-left border-dark rounded">
+                <mat-form-field class=" form-group">
                   <input matInput formControlName="name" placeholder="Nom complet" type="text" />
                 </mat-form-field>
               </div>
             </div>
             <div class="col-md-4">
               <div class="form-group">
-                <mat-form-field class="form-group border-right border-left border-dark rounded">
+                <mat-form-field class="form-group">
                   <input matInput formControlName="email" placeholder="Addresse email" type="email" />
                 </mat-form-field>
               </div>
@@ -23,14 +114,14 @@
           <div class="row">
             <div class="col-md-6">
               <div class="form-group">
-                <mat-form-field class="form-group border-right border-left border-dark rounded">
-                  <input matInput formControlName="cin" placeholder="CIN" type="number" />
+                <mat-form-field class="form-group">
+                  <input matInput formControlName="cin" placeholder="Numero de carte d'identité/passport" type="text" />
                 </mat-form-field>
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <mat-form-field class="form-group border-right border-left border-dark rounded">
+                <mat-form-field class="form-group">
                   <input matInput formControlName="address" placeholder="Addresse complete" type="text" />
                 </mat-form-field>
               </div>
@@ -39,7 +130,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="form-group">
-                <mat-form-field class="form-group border-right border-left border-dark rounded">
+                <mat-form-field class="form-group">
                   <input matInput formControlName="number" placeholder="Numero" type="number" />
                 </mat-form-field>
               </div>
@@ -74,15 +165,15 @@
               </span>
             </div>
           </div>
-
-          <div class="form-group" id="pic">
-            <label for="file" class="disappear">Ajouter une photo</label>
-            <input type="file" class="disappear" accept=".png,.jpg" />
+          <div class="col-12 d-flex justify">
+            <button mat-raised-button (click)="step1()" class="btn-group btn-outline-warning">
+              Revenir a l'étape 1
+            </button>
+            <button mat-raised-button type="submit" class="btn-group btn-outline-primary"
+              [disabled]="clientForm.invalid">
+              Ajouter un client
+            </button>
           </div>
-
-          <button mat-raised-button type="submit" class="btn-group btn-outline-primary" [disabled]="userForm.invalid">
-            Ajouter un client
-          </button>
           <div class="clearfix"></div>
         </form>
         <p class="text-danger">{{ errorMessage }}</p>
