--- a/src/app/components/all-bp/all-bp.component.html
+++ b/src/app/components/all-bp/all-bp.component.html
@@ -8,13 +8,13 @@
         </button>
       </div>
       <div class="form-check-inline card-body">
-        <input class="form-control" [(ngModel)]="searchClient" type="text" placeholder="Rechercher une boite"
+        <input class="form-control" [(ngModel)]="searchBoite" type="number" placeholder="12345"
           aria-label="Rechercher" />
-        <button class="btn btn-outline-success" type="submit" [disabled]="searchClient.trim().length == 0"
+        <button class="btn btn-outline-success" type="submit" [disabled]="searchBoite.length == 0"
           (click)="search()">
           Rechercher
         </button>
-        <button class="btn btn-outline-danger" [disabled]="searchClient.trim().length == 0" (click)=" this.initForm()">
+        <button class="btn btn-outline-danger" [disabled]="searchBoite.length == 0" (click)=" this.initForm()">
           Effacer
         </button>
       </div>
@@ -28,11 +28,11 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let user of true; let i = index">
+            <tr *ngFor="let boite of boiteSearch; let i = index">
               <td>{{ i + 1 }}</td>
-              <td>{{ user.name }}</td>
+              <td>{{ boite.number }}</td>
               <td>
-                <button (click)="details(user.idUser)" class="btn btn-group btn-outline-primary">
+                <button (click)="details(boite._id)" class="btn btn-group btn-outline-primary">
                   Consulter
                 </button>
               </td>
@@ -42,7 +42,7 @@
       </div>
       <div>
         <button class="btn btn-group btn-danger" *ngIf="errorMessage">
-          Cet utilisateur n'existe pas
+          Cette boite n'existe pas
         </button>
       </div>
     </div>
