--- a/src/app/components/client/client.component.html
+++ b/src/app/components/client/client.component.html
@@ -5,13 +5,12 @@
       Profil du client
     </h2>
     <div class="card-avatar d-flex justify-content-between">
-      <img class="img img-thumbnail" width="100" [src]="client?.photo" />
+      <button mat-fab [style]='client?.bg'>
+        {{client?.status}}
+      </button>
       <div class="">
         <button class="btn btn-group btn-outline-info" width="50" height="20" (click)="modify = true">Modifier</button>
       </div>
-    </div>
-    <div class="mt-2">
-      <span class="border badge-pill badge-success">Statut actif</span>
     </div>
     <div class="card-body">
       <mat-nav-list>
@@ -61,10 +60,11 @@
     <div class="card-body">
       <mat-nav-list>
         <mat-list-item> Numero de la boite: {{ client?.boiteNumber }} </mat-list-item>
-        <mat-list-item> Année de l'abonnement: 2013 </mat-list-item>
+        <mat-list-item> <button [routerLink]="['/bp/'+ client?.idBoite]">Voir</button> </mat-list-item>
       </mat-nav-list>
       <mat-divider></mat-divider>
-      <button class="mt-3 btn btn-group btn-danger text-white" width="50" height="20">Resilier</button>
+      <button *ngIf="client?.status !== 'Resilié'" class="mt-3 btn btn-group btn-danger text-white" width="50"
+        height="20">Resilier</button>
 
     </div>
 
@@ -72,57 +72,57 @@
 </div>
 <mat-divider class="mt-2 mb-2"></mat-divider>
 
-<div class="row">
-  <div class="col-12">
+<div class="row d-flex justify-content-between">
+  <div class="col-12 col-md-5">
     <h2>
-      <fa-icon [icon]="faMoney"></fa-icon>
+      <fa-icon [icon]="faMoney" class="text-success"></fa-icon>
       Historique des paiements
     </h2>
     <div class="table">
       <table class="table">
         <thead>
           <tr>
-            <th scope="col">Période</th>
-            <th scope="col">Statut</th>
+            <th scope="col">Année</th>
             <th scope="col">Payé le</th>
-            <th scope="col">Action</th>
+            <th scope="col">Voir</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>Decembre 2019</td>
-            <td>Impayé <fa-icon [icon]="faExc" class="text-danger"></fa-icon>
-            </td>
-            <td></td>
-            <td><button class="btn btn-group btn-info">Payer</button></td>
-          </tr>
-          <tr>
-            <td>Novembre 2019</td>
-            <td>Impayé <fa-icon [icon]="faExc" class="text-danger"></fa-icon>
-            </td>
-            <td></td>
-            <td><button class="btn btn-group btn-info">Payer</button></td>
-          </tr>
-          <tr>
-            <td>Octobre 2019</td>
-            <td>Impayé <fa-icon [icon]="faExc" class="text-danger"></fa-icon>
-            </td>
-            <td></td>
-            <td><button class="btn btn-group btn-info">Payer</button></td>
-          </tr>
-          <tr>
-            <td>Septembre 2019</td>
-            <td>Impayé <fa-icon [icon]="faExc" class="text-danger"></fa-icon>
-            </td>
-            <td></td>
-            <td><button class="btn btn-group btn-info">Payer</button></td>
+          <tr *ngFor="let historic of historics">
+            <td>{{historic?.date}}</td>
+            <td>{{historic?.createdAt}}</td>
+            <td><button [routerLink]="['/checkPayment/'+ historic?._id]">Voir</button></td>
           </tr>
         </tbody>
       </table>
     </div>
   </div>
+    <div class="col-12 col-md-5">
+      <h2>
+        <fa-icon [icon]="faMoney" class="text-danger"></fa-icon>
+        Paiements en attente
+      </h2>
+      <div class="table">
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">Année</th>
+              <th scope="col">Action</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let unpaid of unpaids">
+              <td>{{unpaid.date}}</td>
+              <td>
+                <button (click)="payDialog(unpaid.idClient)" class="btn btn-group btn-info">Payer</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
 </div>
-<div class="row">
+<!-- <div class="row">
   <div class="col-12 col-md-6">
     <table class="table">
       <thead>
@@ -130,17 +130,19 @@
           <th scope="col">#</th>
           <th scope="col">Numero de boite</th>
           <th scope="col">Année de l'abonnement</th>
-          <th scope="col">Année de resiliation</th>
+          <th scope="col">Resilié</th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let boite of boites">
           <th scope="row">index</th>
-          <td>{{boite.boiteNumber}}</td>
-          <td>{{boite.startDate}}</td>
-          <td>{{boite.releaseDate}}</td>
+          <td>{{boite?.boiteNumber}}</td>
+          <td>{{boite?.startDate}}</td>
+          <td *ngIf="boite?.releaseDate">{{boite.releaseDate}}</td>
+          <td *ngIf="(year - boite?.startDate) < 3">Non résilié</td>
+          <td *ngIf="(year - boite?.startDate) > 3">Résilié</td>
         </tr>
       </tbody>
     </table>
   </div>
-</div>
+</div> -->
