--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -8,11 +8,11 @@
       <div class="form-group">
         <div class="form-group">
           <label class="form-check-label small font-italic font-weight-bold">Votre email</label>
-          <input id="email" v-model="loginForm.email" type="text" class="form-control" placeholder="email" />
+          <input id="email" [(ngModel)]="email" type="text" class="form-control" placeholder="email" />
         </div>
         <div class="form-group">
           <label class="form-check-label small font-italic font-weight-bold">Votre mot de passe</label>
-          <input id="password" v-model="loginForm.password" type="password" class="form-control"
+          <input id="password" [(ngModel)]="password" type="password" class="form-control"
             placeholder="mot de passe" />
         </div>
         <div class="form-group d-flex">
@@ -21,8 +21,6 @@
           </button>
         </div>
       </div>
-      <span class="text-danger bg-white rounded-pill text-center">{{
-        error
-      }}</span>
+      <span class="text-danger bg-white rounded-pill text-center">{{error}}</span>
     </div>
   </div>
