--- a/src/app/components/payments/add-payment/add-payment.component.html
+++ b/src/app/components/payments/add-payment/add-payment.component.html
@@ -1,1 +1,26 @@
-<p>add-payment works!</p>
+<div class="row" *ngIf="!error">
+  <div class="col-12">
+    <ul class="list-group">
+      <li class="list-group-item">Pour la periode : {{date}}</li>
+      <li class="list-group-item">Paiement crée par : {{staff?.name}}</li>
+      <li class="list-group-item">Pour le client : {{client?.name}}</li>
+      <li class="list-group-item">Proprietaire de la boite : {{client?.boiteNumber}}</li>
+      <li class="list-group-item">Prix de la boite : {{boite?.price}} Fdj</li>
+      <li class="list-group-item"> Liste des forfaits: <span *ngIf="forfaits.length===0">Aucun forfait</span>
+        <ul class="list-group">
+          <li class="list-group-item" *ngFor="let forfait of forfaits">
+            <span class="mr-5">{{forfait?.name}}</span> <span>{{forfait?.price}}fDJ </span>
+          </li>
+        </ul>
+      </li>
+      <li class="list-group-item">Taxe incluse? :<button *ngIf="tax" disabled class="btn-danger">Oui</button>
+      <button *ngIf="!tax" disabled class="btn-success">Non</button></li>
+      <li class="list-group-item">Total : {{total}} Fdj</li>
+    </ul>
+  </div>
+    <button class="mt-5 align-content-center" [disabled]="encaisser" (click)="payment()">Encaisser</button>
+
+</div>
+<div class="row" *ngIf="error">
+  Si ce message apparait veuillez appeller le développeur, cela veut dire que vous voulez enregistrer un paiement pour une date anormale
+</div>
