--- a/src/app/components/notifications/notifications.component.html
+++ b/src/app/components/notifications/notifications.component.html
@@ -1,1 +1,6 @@
-<p>notifications works!</p>
+
+<div class="row">
+    <div class="col">
+      <img src="../../../assets/building.jfif" alt="">
+    </div>
+  </div>
