--- a/src/app/components/statistiques/statistiques.component.html
+++ b/src/app/components/statistiques/statistiques.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
   <div class="col-12 col-md-6 p-2 t">
     <div class="card client-card">
       <div class=" card-header text-light bg-info">
@@ -41,4 +41,10 @@
        </div>
      </div>
    </div>
+</div> -->
+
+<div class="row">
+  <div class="col">
+    <img src="../../../assets/building.jfif" alt="">
+  </div>
 </div>
