working on boites

--- a/src/app/components/payments/add-payment/add-payment.component.html
+++ b/src/app/components/payments/add-payment/add-payment.component.html
@@ -4,7 +4,7 @@
       <li class="list-group-item">Pour la periode : {{date}}</li>
       <li class="list-group-item">Paiement crée par : {{staff?.name}}</li>
       <li class="list-group-item">Pour le client : {{client?.clientName}}</li>
-      <li class="list-group-item">Proprietaire de la boite : {{client?.boiteNumber}}</li>
+      <li class="list-group-item">Type de boite : {{client?.boiteType}}</li>
       <li class="list-group-item">Prix de la boite : {{boite?.price}} Fdj</li>
       <li class="list-group-item"> Liste des forfaits: <span *ngIf="forfaits.length===0">Aucun forfait</span>
         <ul class="list-group">
@@ -13,7 +13,7 @@
           </li>
         </ul>
       </li>
-      <li class="list-group-item">Taxe incluse? :<button *ngIf="tax" disabled class="btn-danger">Oui</button>
+      <li class="list-group-item">Penalité :<button *ngIf="tax" disabled class="btn-danger">Oui</button>
       <button *ngIf="!tax" disabled class="btn-success">Non</button></li>
       <li class="list-group-item">Total : {{total}} Fdj</li>
     </ul>
